Chore: Testing 657620 session

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="card p-5 text-center">
-        <h1 class="mb-3" style="color:#007bff;">Just App - GKE Demo</h1>
+        <h1 class="mb-3" style="color:#007bff;">Demo GKE from Wuoc</h1>
         <div class="mb-3">
             <input type="text" id="resultBox" class="form-control mb-2" placeholder="Kết quả sẽ hiện ở đây" readonly>
             <button id="getBtn" class="btn btn-primary">Lấy thông tin từ server</button>
